<resources>
    <string name="app_name">HAMCL1.0</string>

    <!--  =====================================Functionbar===================================== -->

    <string name="fb_title_account">账户</string>
    <string name="fb_title_game">游戏</string>
    <string name="fb_title_library">核心库</string>
    <string name="fb_title_launcher">启动器</string>

    <string name="fb_user_manage">用户管理</string>
    <string name="fb_game_manage">游戏管理</string>
    <string name="fb_version_list">版本列表</string>
    <string name="fb_download">下载</string>
    <string name="fb_library_manage">核心安装管理</string>
    <string name="fb_launcher_settings">启动器设置</string>

    <!--  =====================================Homepage===================================== -->

    <string name="home_start">开始游戏</string>
    <string name="home_version">HAMCL-Beta1.0Debug</string>

    <string name="home_title_homepage">主页</string>
    <string name="home_title_download_games">游戏管理 - 安装新游戏版本</string>
    <string name="home_title_game_setting">游戏管理 - 全局游戏设置</string>
    <string name="home_title_install_package">游戏管理 - 安装整合包</string>

    <!--  =====================================Users_Manage===================================== -->

    <string name="fb_user_add_account">添加账户</string>
    <string name="fb_user_offline_mode">离线模式</string>
    <string name="fb_user_mojang_account">Mojang 账户</string>
    <string name="fb_user_microsoft_account">微软账户</string>
    <string name="fb_user_add_authentication_server">添加认证服务器</string>
    <string name="fb_user_external_login">外置登录(authlib-injector)</string>

    <string name="user_login_mode">登录方式</string>
    <string name="user_account_name">用户名</string>
    <string name="user_mojang_accounts">注:在此填写您的Mojang账户!</string>
    <string name="user_microsoft_accounts">注:在此填写您的Microsoft账户!</string>
    <string name="user_password">密码</string>
    <string name="user_mojang_password">注:在此填写您的Mojang密码!</string>
    <string name="user_microsoft_password">注:在此填写您的Microsoft密码!</string>
    <string name="user_cancel">取消</string>
    <string name="user_determine">确定</string>

    <!--  =====================================Games_List===================================== -->

    <string name="fb_version_list_add_minecraft_path">添加游戏目录</string>
    <string name="fb_version_list_install_pack">安装整合包</string>
    <string name="fb_version_list_refresh">刷新</string>

    <string name="list_title_install_games">安装新游戏版本</string>
    <string name="list_title_install_packages">安装整合包</string>
    <string name="list_title_refresh">刷新</string>
    <string name="list_title_games_setting">全局游戏设置</string>

    <string name="menu_games_test">测试游戏</string>
    <string name="menu_games_manage">游戏管理</string>
    <string name="menu_rename_games">重命名该版本</string>
    <string name="menu_delete_games">删除该版本</string>
    <string name="menu_derive_package">导出整合包</string>
    <string name="menu_games_folder">游戏文件夹</string>

    <!--  =====================================Download===================================== -->

    <string name="download_title">国内下载源由BMCLAPI和我的世界中文论坛(MCBBS)提供1高速下载服务。BMCLAPI是公益服，请赞助BMCLAPI以获得稳定高速的下载服务，点击此处查阅详细信息</string>
    <string name="download_source">下载源</string>
    <string name="download_release">稳定版</string>
    <string name="download_snapshot">测试版</string>
    <string name="download_old_beta">远古版</string>

    <string name="download_downloading">下载中...</string>
    <string name="download_cancel">取消下载</string>

    <!--  =====================================Download===================================== -->

    <string name="title_clear_log">清理日志</string>
    <string name="title_refresh_log">刷新日志</string>
    <string name="title_copy">复制日志</string>

    <string name="librarys">Library</string>
    <string name="installs">Install</string>
    <string name="menu_2_hint">Directory of runtime(tar.xz/zip)</string>

    <string name="title_add_package">添加整合包</string>
    <string name="title_download_package">下载整合包</string>
    <string name="set_default_path">设置默认路径</string>
    <string name="game_path">游戏路径</string>
    <string name="menu_5">整合包管理(仅支持zip内包含名为boat的主体文件夹整合包)</string>
    <string name="menu_5_adt">提示</string>
    <string name="menu_5_adm">是否删除当前文件？</string>
    <string name="menu_5_tt">整合包已经删除，已恢复到默认整合包。</string>
    <string name="menu_5_ttd">安装完成！</string>
    <string name="menu_5_ttdn">您安装了错误的整合包，请选择正确的整合包。</string>
    <string name="menu_5_dfd">设置默认路径</string>
    <string name="menu_5_ttt">已设置成默认整合包路径</string>
    <string name="menu_5_adtt">提示</string>
    <string name="menu_5_hint">输入你想添加整合包的备注</string>
    <string name="menu_5_ref">刷新</string>
    <string name="menu_5_dn">下载</string>
    <string name="menu_5_add">添加</string>
    <string name="menu_5_del">删除</string>
    <string name="menu_5_delall">你要删除全部文件嘛？</string>

    <string name="basic_game_settings">基本游戏设置</string>
    <string name="java_virtual_ram">Java虚拟机内存设定</string>
    <string name="ram_setting">游戏内存设置:只改数字!</string>
    <string name="mk">启用键鼠Beta</string>

    <string name="text_setting_help_file">Explore_Launcher 帮助文档</string>
    <string name="text_setting_help_title">可查阅启动器使用教程 以及其它功能</string>
    <string name="text_setting_background_path">背景地址</string>
    <string name="text_setting_background_title">默认(自动检索启动器同目录下的background .png/jpg及bg文件夹内的图片)</string>
    <string name="text_setting_hide_statusbar">隐藏状态栏</string>
    <string name="text_setting_statusbar_title">默认关闭 打开将自动隐藏状态栏</string>

    <string name="default_message">Message here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>